--- a/aws-ecs/bundle.yaml
+++ b/aws-ecs/bundle.yaml
@@ -3,6 +3,8 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsVpc
 metadata:
   name: ${env}-vpc
+  org: ${org}
+  env: ${env}
 spec:
   availabilityZones:
     - ${availability_zone_1}
@@ -18,6 +20,8 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsSecurityGroup
 metadata:
   name: ${env}-http-ingress-and-all-egress
+  org: ${org}
+  env: ${env}
 spec:
   description: allow ingress on http/s ports and egress on all ports
   egress:
@@ -48,12 +52,16 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsRoute53Zone
 metadata:
   name: ${domain_name}
+  org: ${org}
+  env: ${env}
 spec: { }
 ---
 apiVersion: aws.project-planton.org/v1
 kind: AwsCertManagerCert
 metadata:
   name: ${env}-alb-cert
+  org: ${org}
+  env: ${env}
 spec:
   primaryDomainName: ${load_balancer_domain_name}
   route53HostedZoneId: Z0533571BA1UDDSKVCHJ
@@ -63,6 +71,8 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsAlb
 metadata:
   name: ecs-services-alb
+  org: ${org}
+  env: ${env}
 spec:
   dns:
     enabled: true
@@ -99,6 +109,8 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsEcrRepo
 metadata:
   name: ecr-repo
+  org: ${org}
+  env: ${env}
 spec:
   encryptionType: AES256
   imageImmutable: true
@@ -108,6 +120,8 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsEcsCluster
 metadata:
   name: ecs-cluster
+  org: ${org}
+  env: ${env}
 spec:
   capacityProviders:
     - FARGATE
@@ -117,6 +131,8 @@ apiVersion: aws.project-planton.org/v1
 kind: AwsIamRole
 metadata:
   name: ecs-task-execution-role
+  org: ${org}
+  env: ${env}
 spec:
   description: IAM role for ECS tasks to pull images and write logs
   managedPolicyArns:
