--- a/aws-ecs/values.yaml
+++ b/aws-ecs/values.yaml
@@ -2,25 +2,25 @@
 # Provide values for the following parameters when deploying this bundle
 
 # Organization ID on PlantonCloud (e.g., acmecorp)
-org: ""
+org: acmecorp
 
 # Name of your target deployment environment (e.g., dev, staging)
-env: ""
+env: dev
 
 # AWS Availability Zone for the first subnet (e.g., us-east-1a)
-availability_zone_1: "us-east-1a"
+availability_zone_1: us-east-1a
 
 # AWS Availability Zone for the second subnet (e.g., us-east-1b)
-availability_zone_2: "us-east-1b"
+availability_zone_2: us-east-1b
 
 # Custom domain name managed by Route 53 (e.g., example.com)
-domain_name: ""
+domain_name: example.com
 
 # Domain associated with the Application Load Balancer (e.g., app.example.com)
-load_balancer_domain_name: ""
+load_balancer_domain_name: "app.example.com"
 
 # Repository name in ECR for ECS service images (e.g., my-service-repo)
-service_image_repo_name: ""
+service_image_repo_name: shopping-cart-service
 
 # Port on which the service will run (e.g., 8080)
-service_port: "8080"
+service_port: 8080
