--- a/aws-ecs/Chart.yaml
+++ b/aws-ecs/Chart.yaml
@@ -1,9 +1,12 @@
-apiVersion: iac.planton.cloud/v1
+apiVersion: service-hub.planton.cloud/v1
 kind: InfraChart
 metadata:
   name: AWS ECS Quick Start
 spec:
+  selector:
+    kind: platform
   description: Setup infrastructure to start deploying one or more services to AWS ECS
+  iconUrl: https://storage.googleapis.com/planton-cloud-static-assets/logos/api-resources/code2cloud/aws/awsecscluster/v1/assets/logo.svg
   webLinks:
-    chartWebUrl: enter-github-url
-    readmeRawUrl: enter-readme-github-raw-url
+    chartWebUrl: https://github.com/plantoncloud/quick-start-infra-charts/tree/main/aws-ecs
+    readmeRawUrl: https://raw.githubusercontent.com/plantoncloud/quick-start-infra-charts/refs/heads/main/aws-ecs/README.md
