--- a/aws-terraform-backend/values.yaml
+++ b/aws-terraform-backend/values.yaml
@@ -1,7 +1,7 @@
-- name: s3-bucket-name
+- name: bucket_name
   description: Name of the S3 bucket for Terraform state backend (e.g., my-org-terraform-state-backend)
   value: my-org-terraform-state-backend
 
-- name: dynamodb-table-name
+- name: table_name
   description: Name of the DynamoDB table for Terraform state locking (e.g., my-org-tf-state-lock)
   value: my-org-terraform-state-lock
