--- a/aws-ecs-with-https/Chart.yaml
+++ b/aws-ecs-with-https/Chart.yaml
@@ -1,4 +1,4 @@
-apiVersion: multi-cloud.planton.cloud/v1
+apiVersion: infra-hub.planton.cloud/v1
 kind: InfraChart
 metadata:
   name: AWS ECS Quick Start w/ HTTPS
