--- a/gcp-cloud-run/templates/dns.yaml
+++ b/gcp-cloud-run/templates/dns.yaml
@@ -2,6 +2,6 @@
 apiVersion: gcp.project-planton.org/v1
 kind: GcpDnsZone
 metadata:
-  name: ${values.domain_name}
+  name: "{{ values.domain_name }}"
 spec:
-  projectId: ${values.gcp_project_id}
+  projectId: "{{ values.gcp_project_id }}"
