--- a/aws-ecs-with-https/templates/ecs-cluster.yaml
+++ b/aws-ecs-with-https/templates/ecs-cluster.yaml
@@ -2,7 +2,7 @@
 apiVersion: aws.project-planton.org/v1
 kind: AwsEcsCluster
 metadata:
-  name: ${values.env}-ecs-cluster
+  name: "{{ values.env }}-ecs-cluster"
 spec:
   capacityProviders:
     - FARGATE
