--- a/aws-ecs-with-https/templates/ecs-service.yaml
+++ b/aws-ecs-with-https/templates/ecs-service.yaml
@@ -2,28 +2,28 @@
 apiVersion: aws.project-planton.org/v1
 kind: AwsEcsService
 metadata:
-  name: ${values.service_name}
+  name: "{{ values.service_name }}"
 spec:
   alb:
     arn:
       valueFrom:
         kind: AwsAlb
-        name: ${values.env}-ecs-services-alb
+        name: "{{ values.env }}-ecs-services-alb"
         fieldPath: status.outputs.loadBalancerArn
     enabled: true
-    hostname: ${values.service_name}.${values.load_balancer_domain_name}
+    hostname: "{{ values.service_name }}.{{ values.load_balancer_domain_name }}"
     routingType: hostname
     listenerPort: 443
   clusterArn:
     valueFrom:
       kind: AwsEcsCluster
-      name: ${values.env}-ecs-cluster
+      name: "{{ values.env }}-ecs-cluster"
       fieldPath: status.outputs.clusterArn
   container:
     cpu: 256
     env:
       variables:
-        SERVICE_NAME: ${values.service_name}
+        SERVICE_NAME: "{{ values.service_name }}"
     image:
       repo: nginx
       tag: latest
@@ -34,16 +34,16 @@ spec:
     taskExecutionRoleArn:
       valueFrom:
         kind: AwsIamRole
-        name: ${values.env}-ecs-task-execution-role
+        name: "{{ values.env }}-ecs-task-execution-role"
         fieldPath: status.outputs.roleArn
   network:
     securityGroups:
       - valueFrom:
           kind: AwsSecurityGroup
-          name: ${values.env}-http-ingress-and-all-egress
+          name: "{{ values.env }}-http-ingress-and-all-egress"
           fieldPath: status.outputs.securityGroupId
     subnets:
       - valueFrom:
           kind: AwsVpc
-          name: ${values.env}-vpc
+          name: "{{ values.env }}-vpc"
           fieldPath: status.outputs.privateSubnets.[0].id
