--- a/gcp-gke-baseline/templates/cluster.yaml
+++ b/gcp-gke-baseline/templates/cluster.yaml
@@ -5,10 +5,14 @@ metadata:
   name: "{{ values.cluster_name }}"
 spec:
   projectId:
+  {% if values.create_project | bool %}
     valueFrom:
       kind: GcpProject
       name: "{{ values.project_id }}"
       fieldPath: status.outputs.project_id
+  {% else %}
+    value: "{{ values.project_id }}"
+  {% endif %}
   location: "{{ values.cluster_location }}"
   subnetworkSelfLink:
     valueFrom:
