--- a/gcp-gke-baseline/templates/project.yaml
+++ b/gcp-gke-baseline/templates/project.yaml
@@ -1,3 +1,4 @@
+{% if values.create_project | bool %}
 ---
 apiVersion: gcp.project-planton.org/v1
 kind: GcpProject
@@ -13,3 +14,4 @@ spec:
     - container.googleapis.com
     - dns.googleapis.com
     - iam.googleapis.com
+{% endif %}
