set create project to true

--- a/gcp-gke-baseline/values.yaml
+++ b/gcp-gke-baseline/values.yaml
@@ -1,7 +1,7 @@
 # ─── GCP project & billing ─────────────────────────────────────────────────────
 - name: create_project                # NEW
   description: "true → create a brand‑new GCP project; false → use existing project_id"
-  value: "false"
+  value: "true"
 
 - name: project_id
   description: GCP project ID (created or reused)
