--- a/gcp-gke-full-pack/values.yaml
+++ b/gcp-gke-full-pack/values.yaml
@@ -1,3 +1,4 @@
+params:
 # ─── GCP project & billing ─────────────────────────────────────────────────────
 - name: project_id
   description: GCP project ID (created or reused)
