--- a/gcp-gke/templates/addons.yaml
+++ b/gcp-gke/templates/addons.yaml
@@ -1,3 +1,4 @@
+{% if values.certManagerEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: CertManagerKubernetes
@@ -8,6 +9,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.elasticOperatorEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: ElasticOperatorKubernetes
@@ -18,6 +22,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.externalDnsEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: ExternalDnsKubernetes
@@ -28,6 +35,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.externalSecretsEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: ExternalSecretsKubernetes
@@ -38,6 +48,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.ingressNginxEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: IngressNginxKubernetes
@@ -48,6 +61,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.istioEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: IstioKubernetes
@@ -58,6 +74,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.kafkaOperatorEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: KafkaOperatorKubernetes
@@ -68,6 +87,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.postgresOperatorEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: PostgresOperatorKubernetes
@@ -78,6 +100,9 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
+
+  {% if values.solrOperatorEnabled | bool %}
 ---
 apiVersion: kubernetes.project-planton.org/v1
 kind: SolrOperatorKubernetes
@@ -88,3 +113,4 @@ spec:
     kubernetesClusterSelector:
       clusterKind: GcpGkeClusterCore
       clusterName: "{{ values.cluster_name }}"
+  {% endif %}
