--- a/ecs-environment/templates/network.yaml
+++ b/ecs-environment/templates/network.yaml
@@ -38,12 +38,15 @@ spec:
         - 0.0.0.0/0
       protocol: TCP
       toPort: 443
+    # ── Optional service‑specific port (skip if 80/443) ───────
+    {% if values.service_port|trim not in ["80", "443"] %}
     - description: Allow on {{ values.service_port }}
-      fromPort: "{{ values.service_port }}"
+      fromPort: {{ values.service_port }}
+      toPort: {{ values.service_port }}
+      protocol: TCP
       ipv4Cidrs:
         - 0.0.0.0/0
-      protocol: TCP
-      toPort: "{{ values.service_port }}"
+    {% endif %}
   egress:
     - description: allow all
       ipv4Cidrs:
